--- a/style.css
+++ b/style.css
@@ -163,3 +163,11 @@ footer {
     object-fit: cover;    /* Crop image nicely without distortion */
     border-radius: 8px;   /* Optional: smooth corners */
 }
+.menu-item {
+    background: white;
+    padding: 20px;
+    width: 250px;              /* Make card wider */
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    text-align: center;
+}
