--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ footer {
 }
 
 .order-btn:hover {
-    background: #e09e00;
+    background: #910745;
     transform: scale(1.05);
 }
 .menu-item img {
